--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,10 @@ h1,
 h2,
 h3,
 h4,
-h5,
+h5 {
+  color: #787878;
+  font-family: Open_sanslight;
+}
 h6 { font-weight: normal }
 h2 {
     font-family: latoregular;
